# openproof

./: .gitignore  .worktreeinclude  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benchmarks/: import_leandojo_edges.py  run_minif2f.sh
crates/openproof-cli/: Cargo.toml
crates/openproof-cli/src/: autonomous.rs  autonomous_headless.rs  decomposition.rs  event_loop.rs  export.rs  helpers.rs  key_handling.rs  main.rs  shell.rs  slash_autonomous.rs  slash_commands.rs  slash_share_corpus.rs  system_prompt.rs  turn_handling.rs
crates/openproof-cli/src/setup/: app.rs  mod.rs  ui.rs
crates/openproof-cloud/: Cargo.toml
crates/openproof-cloud/src/: lib.rs
crates/openproof-core/: Cargo.toml
crates/openproof-core/src/: apply.rs  apply_content.rs  apply_input.rs  apply_streaming.rs  decomposition_checks.rs  helpers.rs  lib.rs  parser.rs  proof.rs  reports.rs  session.rs  state.rs
crates/openproof-corpus/: Cargo.toml
crates/openproof-corpus/src/: ingest.rs  lib.rs  manifest.rs  packages.rs  search.rs
crates/openproof-dashboard/: Cargo.toml
crates/openproof-dashboard/src/: lib.rs  manage.rs  routes.rs  tex.rs
crates/openproof-dashboard/static/: app.js  graph.js  index.html  sessions.js  styles.css
crates/openproof-lean/: Cargo.toml
crates/openproof-lean/src/: corpus_module.rs  goals.rs  lib.rs  lsp_mcp.rs  pantograph.rs  parse.rs  render.rs  tools.rs  verify.rs
crates/openproof-lean/tests/: lean_check_test.rs
crates/openproof-model/: Cargo.toml
crates/openproof-model/src/: lib.rs  tools.rs
crates/openproof-protocol/: Cargo.toml
crates/openproof-protocol/src/: lib.rs
crates/openproof-search/: Cargo.toml
crates/openproof-search/src/: config.rs  lib.rs  lsp_search.rs  ollama.rs  search.rs
crates/openproof-search/tests/: minif2f_bench.rs  search_integration.rs
crates/openproof-store/: Cargo.toml
crates/openproof-store/src/: corpus.rs  corpus_seed.rs  corpus_sync.rs  embeddings.rs  extract.rs  lib.rs  schema.rs  sessions.rs  store.rs
crates/openproof-tui/: Cargo.toml
crates/openproof-tui/src/: custom_terminal.rs  insert_history.rs  lib.rs  markdown.rs
lean/: OpenProof.lean  lake-manifest.json  lakefile.toml
lean/OpenProof/: Corpus.lean  CorpusExport.lean  Scratch.lean  ScratchBad.lean
lean/OpenProof/Sessions/session_0a480dce-6aa6-4cbe-acec-cfcd196c79a2/: branch_170c023f-cf02-48a4-9c07-735c70577068.lean
lean/OpenProof/Sessions/session_0cc1cbeb-167b-4d9f-b4d1-8549ea53bf45/: branch_102bf145-070c-4fff-aa67-7de4239b3d46.lean
lean/OpenProof/Sessions/session_15e1bdc3-f660-47fb-9279-52c93bae0ab7/: branch_1278a182-ff43-49f4-bebd-e6caf397c570.lean  branch_48734f92-b436-47a5-b00b-87bcff151233.lean
lean/OpenProof/Sessions/session_1f572764-1232-4551-9196-37744e622e65/: branch_46657361-d52e-45e9-ac71-e2dad83eff37.lean  branch_5734c552-f171-41b4-9ca3-dac4ea925a44.lean  branch_6743b670-f423-4b33-8685-4fff7d98b961.lean
lean/OpenProof/Sessions/session_23198900-ecab-4271-a373-dc3dd0a221ec/: branch_d2f3afcb-df9c-4134-86a0-96f5f8adc9d5.lean
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-x64/: package.json
npm/openproof/: package.json
npm/openproof/scripts/: postinstall.js
scripts/: install.sh  publish-npm.sh
(+46 files in other folders)
