[package]
name = "openproof-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Conversational theorem prover for Lean 4"
repository = "https://github.com/mxthematic/openproof"
keywords = ["lean", "theorem-prover", "formal-verification"]
categories = ["command-line-utilities", "mathematics"]

[[bin]]
name = "openproof"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
crossterm.workspace = true
directories.workspace = true
ratatui.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
openproof-core = { path = "../openproof-core" }
openproof-dashboard = { path = "../openproof-dashboard" }
openproof-store = { path = "../openproof-store" }
openproof-tui = { path = "../openproof-tui" }
openproof-model = { path = "../openproof-model" }
openproof-lean = { path = "../openproof-lean" }
openproof-search = { path = "../openproof-search" }
openproof-protocol = { path = "../openproof-protocol" }
openproof-cloud = { path = "../openproof-cloud" }
openproof-corpus = { path = "../openproof-corpus" }
