[package]
name = "openproof-cloud"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openproof-protocol = { path = "../openproof-protocol" }
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
urlencoding.workspace = true
