[package]
name = "openproof-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
directories.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
openproof-protocol = { path = "../openproof-protocol" }

