[package]
name = "openproof-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
directories.workspace = true
qdrant-client = "1.17.0"
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
openproof-protocol = { path = "../openproof-protocol" }

